# vehicle-control

./: .gitignore  .pre-commit-config.yaml  INSTALLMA27.md  README.md  TODO.md  environment.yaml  environment.yml  main.py  model.py  model_simulation.ipynb  pyproject.toml  requirements.txt  track.py  utils.py
config/: complicato.yaml  dynamic_ippodromo.yaml  ippodromo.yaml  kinematic_complicato.yaml  kinematic_ippodromo.yaml  simconfig.yaml
controller/: cascaded_mpc.py  controller.py  dynamic_mpc.py  io_linearization.py  kinematic_mpc.py  mpc.py  pointmass_mpc.py  singletrack_mpc.py
controllers/: __init__.py  control.py  controller.py  dfl.py  io_linearization.py  mpc.py  new_mpc.py  new_new_mpc.py  trajectory.py  unicycle_mpc.py
environment/: track.py  trajectory.py
examples/: double_integrator.ipynb
model/: differential_drive.py  dynamic_car.py  dynamic_point_mass.py  kinematic_car.py  racing_car.py  robot.py  single_track_model.py  state.py
modeling/: bicycle.py  car.py  kin_model.py  kinematic_car.py  old_track.py  point_mass_model.py  racing_car.py  robot.py  single_track.py  state.py  track.py  trajectory.py  util.py
models/: __init__.py  differential_drive.py  dynamic_car.py  dynamic_point_mass.py  kinematic_car.py  racing_car.py  robot.py
old-stuff/: mpc.py  unicycle.py  unicycle_test.py
presentation/: beamerthemesintef.sty  presentation.tex
report/: main.tdo  main.tex  references.bib
resources/: mpc_scianca.py  mpc_turrisi.py
simulation/: __init__.py  kinracing.py  model.py  plotting.py  racing.py  simulation.py  simulator.py  utils.py  (+1 more)
(+307 files in other folders)
