[project]
authors = [{name = "neverorfrog", email = "97flavio.maiorana@gmail.com"}]
dependencies = ["casadi>=3.6.7,<4", "matplotlib>=3.9.3,<4", "numpy>=2.1.3,<3", "omegaconf>=2.3.0,<3", "pyyaml>=6.0.2,<7", "pyqt5>=5.15.11,<6", "scipy>=1.14.1,<2"]
description = "Add a short description here"
name = "vehicle_control"
requires-python = "== 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["vehicle_control"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
vehicle_control = { path = ".", editable = true }

[tool.pixi.tasks]
